2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1393/cpukit
	* posix/src/mutextranslatereturncode.c: Add entry to table for
	CORE_MUTEX_RELEASE_NOT_ORDER.

2009-03-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1376/filesystem
	* libcsupport/include/rtems/libio.h, libfs/src/dosfs/fat_file.c,
	libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_dir.c,
	libfs/src/dosfs/msdos_file.c, libfs/src/imfs/deviceio.c,
	libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_directory.c,
	libfs/src/imfs/memfile.c, libfs/src/nfsclient/src/nfs.c: lseek
	handlers should return off_t.

2009-03-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1388/cpukit
	* rtems/src/semcreate.c: Classic Semaphores allow both priority inherit
	and ceiling attributes to be set on semaphore create. These
	attributes are mutually exclusive and this should be an error.

2009-02-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1377/shell
	* libmisc/shell/main_netstats.c: Remove #if 0 which should not have
	been there anyway.

2009-02-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1374/misc
	* libmisc/stackchk/check.c: Fix printk formatting string.

2009-02-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ftpd/ftpd.c: Change SIX_MONTHS to time_t.

2009-02-04	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/lib/ftpfs.c: Enable write and mount filesystem
	with read-write access.

2009-02-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/net/if_ppp.h: Eliminate pppattach,  pppintr
	  (Unused).
	* libnetworking/net/if_ppp.c: Eliminate pppintr (Unused).

2009-01-29	 Nickolay Semyonov-Kolchin <nbkolchin@gmail.com>

	PR 1359/cpukit
	* libcsupport/src/libio.c: rtems_libio_allocate:
	rtems_libio_iop_freelist incorrectly zeroed on semaphore error. Now
	checks error and does not modify anything until sure it has created
	semaphore.

2009-01-29	Gene Smith <gene.smith@siemens.com>

	PR 1363/filesystem
	* libfs/src/dosfs/fat.h: Fix issue where 32 bit values are not written